--- a/webSite/src/assets/css/styles.css
+++ b/webSite/src/assets/css/styles.css
@@ -22,55 +22,99 @@ body {
     align-items: center;
 }
 
-#background {
+#background, #bedroom {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 1;
+    pointer-events: none;
 }
 
-.container {
-    width: 400px;
+.container, .instructions-container {
+    width: 40vw;
     margin: 0 auto;
-    padding: 20px;
+    padding: 5vw;
     background-color: var(--light-blue);
-    border-radius: 5px;
-    box-shadow: 0 2px 5px var(--main-bg);
+    border-radius: 0.5vw;
+    box-shadow: 0 0.2vw 0.5vw var(--main-bg);
     text-align: center;
     opacity: 0;
     z-index: 2;
+    cursor:default;
+}
+
+.instructions-container {
+    width : 50vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-family: 'VT323', monospace;
+    font-size: 2vw;
+    position: fixed;
+    bottom: 0;
+}
+
+#back {
+    display: flex;
+    padding: 2vw;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: #3a86ff;
+    width: 15vw;
+    height: 1vw;
+    position: fixed;
+    top: 2vh;
+    left: 2vh;
+    font-family: 'VT323', monospace;
+    font-size: 1.5vw;
+    cursor:pointer;
+}
+
+#backButton {
+    width: 2vw;
+}
+
+.side-containers {
+    cursor: pointer;
+    width: 5vw;
+}
+
+#left {
+    display: none;
 }
 
 h1 {
     text-align: center;
     color: var(--dark-navy);
     font-family: 'Press Start 2P', sans-serif;
-    font-size: 30px;
-    text-shadow: 3px 3px 3px var(--shadow);
+    font-size: 3vw;
+    text-shadow: 0.3vw 0.3vw 0.3vw var(--shadow);
 }
 
 .menu {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 3vw;
 }
 
 .menu a {
     display: block;
-    width: 200px;
-    padding: 10px;
-    margin-bottom: 10px;
+    width: 20vw;
+    padding: 1vw;
+    margin-bottom: 1vw;
     text-align: center;
     text-decoration: none;
     color: whitesmoke;
     background-color: var(--navy);
-    border-radius: 5px;
-    box-shadow: 0 3px 5px var(--main-bg);
+    border-radius: 0.5vw;
+    box-shadow: 0 0.3vw 0.5vw var(--main-bg);
     font-family: 'VT323', monospace;
-    font-size: 20px;
+    font-size: 2vw;
+    cursor: pointer;
 }
 
 .menu a:hover {
@@ -92,48 +136,49 @@ h1 {
 
 #logo {
     height: 75vh;
+    pointer-events: none;
 }
 
 .spinner {
     opacity: 0;
-    border: 8px solid;
+    border: 1em solid;
     border-color: var(--dark-grey);
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 20vh;
+    height: 20vh;
     transform: rotate(45deg);
     animation: colorChange 7s linear 1;
 }
 
 @keyframes colorChange {
     0%, 100% {
-        border-top: 8px solid var(--light-purple);
-        border-right: 8px solid var(--light-purple);
-        border-bottom: 8px solid var(--light-purple);
-        border-left: 8px solid var(--light-purple);
+        border-top: 1em solid var(--light-purple);
+        border-right: 1em solid var(--light-purple);
+        border-bottom: 1em solid var(--light-purple);
+        border-left: 1em solid var(--light-purple);
     }
     20% {
-        border-top: 8px solid var(--dark-grey);
-        border-right: 8px solid var(--dark-grey);
-        border-bottom: 8px solid var(--dark-grey);
-        border-left: 8px solid var(--dark-grey);
+        border-top: 1em solid var(--dark-grey);
+        border-right: 1em solid var(--dark-grey);
+        border-bottom: 1em solid var(--dark-grey);
+        border-left: 1em solid var(--dark-grey);
     }
     40% {
-        border-top: 8px solid var(--light-purple);
-        border-right: 8px solid var(--dark-grey);
-        border-bottom: 8px solid var(--dark-grey);
-        border-left: 8px solid var(--dark-grey);
+        border-top: 1em solid var(--light-purple);
+        border-right: 1em solid var(--dark-grey);
+        border-bottom: 1em solid var(--dark-grey);
+        border-left: 1em solid var(--dark-grey);
     }
     60% {
-        border-top: 8px solid var(--light-purple);
-        border-right: 8px solid var(--light-purple);
-        border-bottom: 8px solid var(--dark-grey);
-        border-left: 8px solid var(--dark-grey);
+        border-top: 1em solid var(--light-purple);
+        border-right: 1em solid var(--light-purple);
+        border-bottom: 1em solid var(--dark-grey);
+        border-left: 1em solid var(--dark-grey);
     }
     80% {
-        border-top: 8px solid var(--light-purple);
-        border-right: 8px solid var(--light-purple);
-        border-bottom: 8px solid var(--light-purple);
-        border-left: 8px solid var(--dark-grey);
+        border-top: 1em solid var(--light-purple);
+        border-right: 1em solid var(--light-purple);
+        border-bottom: 1em solid var(--light-purple);
+        border-left: 1em solid var(--dark-grey);
     }
 }
