--- a/webSite/src/assets/css/styles.css
+++ b/webSite/src/assets/css/styles.css
@@ -14,6 +14,25 @@ body {
     font-family: Arial, sans-serif;
 }
 
+#flashlight {
+    margin: 0;
+    background-image: url("../png/bedroom/1.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 100vw;
+    height: 100vh;
+}
+
+svg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1;
+}
+
 .pageCenter{
     margin: 0;
     height: 100vh;
@@ -29,48 +48,131 @@ body {
     width: 100%;
     height: 100%;
     z-index: 1;
+    pointer-events: none;
 }
 
-.container {
-    width: 400px;
+#front-image:hover {
+    mask: url("#cursorMask");
+}
+
+#front-image {
+    filter: brightness(0.3);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 2;
+}
+
+.monster {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 7vw;
+    height: auto;
+    z-index: 0;
+}
+
+.container, .instructions-container {
+    width: 40vw;
     margin: 0 auto;
-    padding: 20px;
+    padding: 2vw;
     background-color: var(--light-blue);
-    border-radius: 5px;
-    box-shadow: 0 2px 5px var(--main-bg);
+    border-radius: 0.5vw;
+    box-shadow: 0 0.2vw 0.5vw var(--main-bg);
     text-align: center;
     opacity: 0;
     z-index: 2;
+    cursor:default;
+    user-select: none;
+}
+
+.instructions-container {
+    width : 50vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    font-family: 'VT323', monospace;
+    font-size: 2vw;
+    position: fixed;
+    bottom: 0;
+    z-index: 999;
+}
+
+#mask {
+    height: 100%;
+    width: 100%;
+    background-color: var(--main-bg);
+    z-index: 998;
+}
+
+#back {
+    display: flex;
+    padding: 2vw;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: #3a86ff;
+    width: 15vw;
+    height: 1vw;
+    position: fixed;
+    top: 2vh;
+    left: 2vh;
+    font-family: 'VT323', monospace;
+    font-size: 1.5vw;
+    cursor:pointer;
+    user-select: none;
+    z-index: 999;
+}
+
+#backButton {
+    width: 2vw;
+}
+
+.side-containers {
+    cursor: pointer;
+    width: 5vw;
+}
+
+#left {
+    display: none;
 }
 
 h1 {
     text-align: center;
     color: var(--dark-navy);
     font-family: 'Press Start 2P', sans-serif;
-    font-size: 30px;
-    text-shadow: 3px 3px 3px var(--shadow);
+    font-size: 3vw;
+    text-shadow: 0.3vw 0.3vw 0.3vw var(--shadow);
 }
 
 .menu {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 3vw;
 }
 
 .menu a {
     display: block;
-    width: 200px;
-    padding: 10px;
-    margin-bottom: 10px;
+    width: 20vw;
+    padding: 1vw;
+    margin-bottom: 1vw;
     text-align: center;
     text-decoration: none;
     color: whitesmoke;
     background-color: var(--navy);
-    border-radius: 5px;
-    box-shadow: 0 3px 5px var(--main-bg);
+    border-radius: 0.5vw;
+    box-shadow: 0 0.3vw 0.5vw var(--main-bg);
     font-family: 'VT323', monospace;
-    font-size: 20px;
+    font-size: 2vw;
+    cursor: pointer;
+}
+
+.main-container {
+    z-index: 1;
 }
 
 .menu a:hover {
@@ -92,48 +194,89 @@ h1 {
 
 #logo {
     height: 75vh;
+    pointer-events: none;
+}
+
+#room-container {
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    z-index: 998;
+}
+
+.room-view  {
+    top: 50%;
+    width: 7vw;
+    display: flex;
+    align-items: center;
+    color: white;
+    font-size: 5vw;
+}
+
+.room-view div  {
+    text-align: center;
+    background-color: #4CC9F0;
+    border-radius: 100%;
+    cursor: pointer;
+    position: fixed;
+    height: 10vh;
+    width:10vh;
+    z-index: 999;
+    opacity: 0;
+}
+
+#leftArrow {
+    left: 2vw;
+}
+
+#rightArrow {
+    right: 2vw;
 }
 
 .spinner {
     opacity: 0;
-    border: 8px solid;
+    border: 1em solid;
     border-color: var(--dark-grey);
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 10vh;
+    height: 10vh;
     transform: rotate(45deg);
     animation: colorChange 7s linear 1;
 }
 
 @keyframes colorChange {
     0%, 100% {
-        border-top: 8px solid var(--light-purple);
-        border-right: 8px solid var(--light-purple);
-        border-bottom: 8px solid var(--light-purple);
-        border-left: 8px solid var(--light-purple);
+        border-top: 1em solid var(--light-purple);
+        border-right: 1em solid var(--light-purple);
+        border-bottom: 1em solid var(--light-purple);
+        border-left: 1em solid var(--light-purple);
     }
     20% {
-        border-top: 8px solid var(--dark-grey);
-        border-right: 8px solid var(--dark-grey);
-        border-bottom: 8px solid var(--dark-grey);
-        border-left: 8px solid var(--dark-grey);
+        border-top: 1em solid var(--dark-grey);
+        border-right: 1em solid var(--dark-grey);
+        border-bottom: 1em solid var(--dark-grey);
+        border-left: 1em solid var(--dark-grey);
     }
     40% {
-        border-top: 8px solid var(--light-purple);
-        border-right: 8px solid var(--dark-grey);
-        border-bottom: 8px solid var(--dark-grey);
-        border-left: 8px solid var(--dark-grey);
+        border-top: 1em solid var(--light-purple);
+        border-right: 1em solid var(--dark-grey);
+        border-bottom: 1em solid var(--dark-grey);
+        border-left: 1em solid var(--dark-grey);
     }
     60% {
-        border-top: 8px solid var(--light-purple);
-        border-right: 8px solid var(--light-purple);
-        border-bottom: 8px solid var(--dark-grey);
-        border-left: 8px solid var(--dark-grey);
+        border-top: 1em solid var(--light-purple);
+        border-right: 1em solid var(--light-purple);
+        border-bottom: 1em solid var(--dark-grey);
+        border-left: 1em solid var(--dark-grey);
     }
     80% {
-        border-top: 8px solid var(--light-purple);
-        border-right: 8px solid var(--light-purple);
-        border-bottom: 8px solid var(--light-purple);
-        border-left: 8px solid var(--dark-grey);
+        border-top: 1em solid var(--light-purple);
+        border-right: 1em solid var(--light-purple);
+        border-bottom: 1em solid var(--light-purple);
+        border-left: 1em solid var(--dark-grey);
     }
 }
